Compatible with JDK 11